fix: horizontal scroll in block features

--- a/blocks/advertisement/__content/advertisement__content.css
+++ b/blocks/advertisement/__content/advertisement__content.css
@@ -12,3 +12,9 @@
     padding: 0;
   }
 }
+
+@media (max-width: 480px){
+  .advertisement__content{
+    max-width: 320px;
+  }
+}
