--- a/blocks/advertisement/__image/advertisement__image.css
+++ b/blocks/advertisement/__image/advertisement__image.css
@@ -27,5 +27,6 @@
 @media (max-width:768px){
   .advertisement__image{
     width: 100%;
+    max-width: 320px;
   }
 }
