--- a/blocks/features/__images/features__images.css
+++ b/blocks/features/__images/features__images.css
@@ -2,5 +2,5 @@
   display: flex;
   justify-content: center;
   position: relative;
-  padding: 0px 28px 100px;
+  padding: 0px 0px 100px;
 }
