--- a/blocks/section-title/_align/section-title_align_left.css
+++ b/blocks/section-title/_align/section-title_align_left.css
@@ -14,3 +14,11 @@
     width: calc(100% - 32px);
   }
 }
+
+@media (max-width:480px){
+  .section-title_align_left{
+    font-size: 40px; 
+    width: 100%;
+    max-width: 280px;
+  }
+}
